글 수정 후 처리